# song_phenotyping

./: .gitignore  A1_spec_slicing.py  A_spec_saving.py  B_flattening.py  C_embedding.py  D_labelling.py  E_phenotyping.py  E_phenotyping_old.py  README.md  SETUP.md  bird_catalog_pdf_generator.py  cluster_pdfs.py  compare_hamish_txts.py  config.yaml.example  convert_cbin_to_wav.py  debug_notebook.ipynb  environment.yml  family_spec_generation.py  impulsivity_pilot_analysis.ipynb  interactive_umap.py  make_simple_song_pdf.py  pdfs.py  phenotype_pdfs.py  pyproject.toml  run_pipeline.py  slice_validation.py  song_catalog_html.py  song_catalog_pdf.py  song_visualization.py  song_visualization_complex.py  syllable_database.py  syllable_features.ipynb  syllable_features.py  syllable_features_ML.py  syllable_visualization.py  testing.ipynb  visualizing_specs.py
docs/: HANDOFF.md  PROJECT_REFERENCE.md  conf.py  index.rst  installation.rst  usage.rst
file_management/: audio_files_for_select_families.ipynb  audio_files_for_select_families.py  compare_hamish_txts.py  comparing_xfoster_csvs.py  deduplicate_and_read_datetimes.py  extract_parent_directories.py  find_files_for_xfosters.py  gmm_in_db.ipynb  identifying_families.ipynb  merge_family_and_audio_data.py  parse_parent_directories_from_audio_filepaths.py  song_catalog.py  song_catalog_unlabeled.py  x_foster_audio_files.py  x_foster_metadata.py  xfoster_audio_search.ipynb  xfoster_audit.py  xfoster_data.ipynb  xfoster_db_and_csv_audit.py  xfoster_metadata_and_filesearch.py
scripts/: cluster_pdfs.py  cohort_comparison.py  (+10 more)
(+83 files in other folders)
